--- a/results.tex
+++ b/results.tex
@@ -1,14 +1,14 @@
 \begin{figure*}[t]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-08.pdf} 
-    \caption{Expected mean peak ground acceleration (PGA) for 2 and 10 percent of probability for earthquake magnitudes exceeding $M_w$ 5 for (a) the five-seismic regions R model and (b) the uniform seismic region U model.}
+    \caption{Expected mean peak ground acceleration (PGA) for 2 and 10 percent of probability of exceedance in 50 years for (a) the five-seismic regions R model and (b) the uniform seismic region U model.}
     \label{fig:pga}
 \end{figure*}
 
 \begin{figure*}[t]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-09.pdf} 
-    \caption{Difference between the mean PGA values obtained for the uniform U model results and the corresponding R models for 2 (left) and 10 (right) percent probabilities of exceeding magnitudes $M_w$ 5.}
+    \caption{Difference between the mean PGA values from models U and R for 2 (left) and 10 (right) percent probabilities of exceedance in 50 years.}
     \label{fig:pga.diff}
 \end{figure*}
 
@@ -23,13 +23,13 @@
 
 \section{Results and Analysis}
 
-Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected pGA values for two two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes $M_w \geq 5$. These probabilities correspond to return periods of 475 and 2475 years. For nomenclature purposes, we use the probabilities as a prefix and the magnitude as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceeding an event magnitude $M_w$ 5 in 50 years using the five-regions model as the 2R5, whereas for the case of 10 percent probability of exceeding $M_w$ 5 when using the uniform model we would use the tag name 10U5.
+Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes $M_w \geq 5$. These probabilities correspond to return periods of 475 and 2475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceeding an event magnitude $M_w$ 5 in 50 years using the five-regions model as the R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we would use the tag name U10.
 
 Our choice for the threshold magnitude is based on the assumption that at the local scale (where a point of interest is close to the source), the hazard will be controlled by events $M_w \geq 5$, or conversely, based on the assumption that smaller events at increasing distances will not drive the hazard of a given site. In turn, the 2 and 10 percent probability of exceedance in a 50-years span are considered a standard practice in seismic design, and are the probabilities used in the Iranian building code \citep{BHRC2014}.
 
 In the R models, we computed the probability of exceedance of the ground motion separately for each region and then added their exceedance rates at a given level of ground motion in order to have the contribution of all regions for any given grid point within the region of interest. The results are obtained in the form of annual rate of exceedance. Expected PGA values are therefore a ``slice'' of the actual hazard curves cut across all grid points for a chosen exceedance rate.
 
-Fig.~\ref{fig:pga} shows the expected mean PGA values obtained using the selected attenuation relationship as a measured of gravity (g) throughout the region of interest for the different models, 2R5, 10R5, 2U5 and 10U5. As can be expected, the highest PGA values are associated with the 2R5 and 2U5 models, and the lowest with the 10R5 and 10U5 models. In results for the R models shown Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Kopeh Dagh region (near the border with Turkmenistan), and in a small area half-way between the city of Karaj and the Piranshahr fault, where a small concentration of events can be observed in Fig.~\ref{fig:catalog}b, as well as along the Piranshahr and Morvarid fault lines between the Zagros and Azerbaijan seismic regions (see Fig.~\ref{fig:selected}a for reference). The Azerbaijan seismic zone does not present equally high levels of expected ground motion. In the U models shown in Fig.~\ref{fig:pga}b, on the other hand, the highest levels of expected ground motion are observed precisely in the area corresponding to the Azerbaijan seismic region, especially in the vicinity of the North Tabriz Fault system (see Fig.~\ref{fig:selected} for reference).
+Fig.~\ref{fig:pga} shows the expected mean PGA values obtained using the selected attenuation relationship as a measured of gravity (g) throughout the region of interest for the different models, R2, R10, U2 and U10. As can be expected, the highest PGA values are associated with the R2 and U2 models, and the lowest with the R10 and U10 models. In results for the R models shown Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Kopeh Dagh region (near the border with Turkmenistan), and in a small area half-way between the city of Karaj and the Piranshahr fault, where a small concentration of events can be observed in Fig.~\ref{fig:catalog}b, as well as along the Piranshahr and Morvarid fault lines between the Zagros and Azerbaijan seismic regions (see Fig.~\ref{fig:selected}a for reference). The Azerbaijan seismic zone does not present equally high levels of expected ground motion. In the U models shown in Fig.~\ref{fig:pga}b, on the other hand, the highest levels of expected ground motion are observed precisely in the area corresponding to the Azerbaijan seismic region, especially in the vicinity of the North Tabriz Fault system (see Fig.~\ref{fig:selected} for reference).
 
 In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pga.diff}, which shows the difference between both models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. As it can be seen, this is true practically throughout the whole region at very low levels, and in particular in the north-central region at a moderate level of up to 0.2 g and more predominantly in the north-western region of Azerbaijan at levels of about 0.2 to 0.45 g.
 
@@ -37,7 +37,7 @@ Overall, these results are consistent with the seismicity observed in Fig.~\ref{
 
 With this in mind, we make the following additional consideration. No one model (R or U) can be considered uniquely correct. Both carry a certain level of epistemic uncertainty. A means to address this is to use combinations of different models to incorporate information from all possible models. This would also be true, for instance, if in the future we were to consider other attenuation relationships. Here we also computed the expected levels of ground motion for a combination of the R and U models (with equal weights). We refer to this as the (R,U) model. The results of this combined model are shown in Fig.~\ref{fig:pga.ru.std} in the form of expected mean PGA values, along with the marginal values of plus and minus one standard deviation. Here, the standard deviation is carried forward in the calculation from the attenuation relationship and thus affects every grid point differently depending on the added contributions from each region. 
 
-As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a, and thus we consider it to be a better assessment of the seismic hazard in the region. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the Piranshahr and Morvarid faults in the Zagros region and that of the different faults in the Alborz and Kopeh Dagh regions. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the 2(R,U)5+STD model results, where the expected accelerations are of the order of 1.4 g to the northwest of city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigate peak accelerations.
+As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a, and thus we consider it to be a better assessment of the seismic hazard in the region. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the Piranshahr and Morvarid faults in the Zagros region and that of the different faults in the Alborz and Kopeh Dagh regions. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2+STD model results, where the expected accelerations are of the order of 1.4 g to the northwest of city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigate peak accelerations.
 
 \begin{figure*}[th!]
     \centering
@@ -46,11 +46,17 @@ As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows
     \label{fig:hazardcurve}
 \end{figure*}
 
-We also note that the overall distribution of mean PGA values shown in the middle panels in Fig.~\ref{fig:pga.ru.std} are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA (10\% in 50 years) values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, where we find equivalent values to be between 0.35 and 0.5 g in the 10(R,U)5 model. Similarly, for the particular case of the city of Tabriz, \citet{Vafaie2011} obtained slightly higher expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\%, respectively, where our mean values are about 0.53 and 0.36 g for the same corresponding probabilities. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 for Tehran, where we found equivalent results to be between 0.50 and 0.30 g, for 2 and 10\% respectively. The latter estimate is in good agreement with \citet{Abdi2013}, who predicts PGA values in the vicinity of Karaj and Tehran to be on the order of 0.27--0.31 g for 10\% probability of exceedance. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also on the same order of those shown in Fig.~\ref{fig:pga.ru.std}. Finally, for the city of Bojnurd in the northeast province of Khorasan in the Kopeh Dagh seismic region, \citet{Rahgozar2012} reports expected PGA values in the ranges of 0.28--0.49 and 0.15--0.22 g for 2 and 10\%, where we obtain mean values of 0.51 and 0.34 g, respectively.
+We also note that the overall distribution of mean PGA values shown in the middle panels in Fig.~\ref{fig:pga.ru.std} are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA (10\% in 50 years) values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, where we find equivalent values to be between 0.35 and 0.5 g in the 10(R,U)5 model. Similarly, for the particular case of the city of Tabriz, \citet{Vafaie2011} obtained slightly higher expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\%, respectively, where our mean values are about 0.53 and 0.36 g for the same corresponding probabilities. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 g for Tehran, where we found equivalent results to be about 0.25--0.35 g for a 10\% probability of exceedance. The latter estimate is in good agreement with \citet{Abdi2013}, who predicts PGA values in the vicinity of Karaj and Tehran to be on the order of 0.27--0.31 g for 10\% probability of exceedance. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also on the same order of those shown in Fig.~\ref{fig:pga.ru.std}. Finally, for the city of Bojnurd in the northeast province of Khorasan in the Kopeh Dagh seismic region, \citet{Rahgozar2012} reports expected PGA values in the ranges of 0.28--0.49 and 0.15--0.22 g for 2 and 10\%, where we obtain mean values of 0.51 and 0.34 g, respectively.
 
-Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher the rest, especially in the cities of Tabriz, Karaj, Tehran and Mashhad, where their results are closer to those of our upper (+STD) range of values. Although not included here for brevity, we also computed expected PGA values for a magnitude thresholds $M_w$ 4.5. In that case, our results are closer to those of \citet{Golara2014}, but begin to deviate from the rest. We should note that, in general, the smoothed seismicity method used here tends to lead to lower hazard estimations than those obtained using specific fault definitions (as opposed to point sour\-ces), and thus is sensitive to the appropriate selection of the magnitude threshold.
+Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher the rest, especially in the cities of Tabriz, Karaj, Tehran and Mashhad, where their results are closer to those of our upper (+STD) range of values. 
 
-Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran considering the two basic models R5 and U5 and the combined model (R,U)5. In each case we also show the range $\pm 1$ standard deviation (shaded areas). These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the results of the central cities of Karaj and Tehran, whereas for the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones, the R and U models yield similar if not equivalent hazard estimates. This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pga.diff} and \ref{fig:pga.ru.std}.
+% ***
+
+% Although not included here, we also computed expected PGA values for a magnitude threshold $M_w$ 4.5. In that case, our results are closer to those of \citet{Golara2014}, but deviate from the rest. In general, the smoothed seismicity method tends to lead to lower hazard estimations than those obtained using specific fault definitions (as opposed to point sources) where the concept of a threshold becomes unnecessary and the hazard, and thus is sensitive to the appropriate selection of the magnitude threshold.
+
+% ***
+
+Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran considering the two basic R and U models and the combined (R,U) model. In each case we also show the range $\pm 1$ standard deviation (shaded areas). These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the results of the central cities of Karaj and Tehran, whereas for the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones, the R and U models yield similar if not equivalent hazard estimates. This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pga.diff} and \ref{fig:pga.ru.std}.
 
 \begin{figure}[t]
     \centering
@@ -59,4 +65,4 @@ Following the comparisons shown in Table \ref{tab:pga}, we looked into the more 
     \label{fig:tehran}
 \end{figure}
 
-Last, we put additional attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015}. Our results are similar to those obtained by \citet{Ghodrati2003} in the range between 0.2 and 0.7 (corresponding to annual probabilities of exceedance between $10^{-5}$ and $10^{-2}$), but the trend indicates we would obtain increasingly higher probabilities associated with PGA values above 0.8 g. Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}.
+Last, we put additional attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015}. Our results are similar to those obtained by \citet{Ghodrati2003} in the range between 0.2 and 0.7 g (corresponding to annual probabilities of exceedance between $10^{-5}$ and $10^{-2}$), but the trend indicates we would obtain increasingly higher probabilities associated with PGA values above 0.8 g. Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}.
