--- a/new-response.tex
+++ b/new-response.tex
@@ -32,7 +32,7 @@ Dear Dr.~Garc\'{i}a Fern\'{a}ndez,
 
 We write in reference to your communication of 12 December 2016 regarding our manuscript submission to the Journal of Seismology, No.~JOSE-D-16-00092R1. We want to thank you for your positive reaction to the revised manuscript and your decision to move forward with the publication of our article, upon the suggested minor changes of language, which we are now pleased to inform we have completed. Enclosed you will find the new version of our submission, which we would appreciate if you could approve at your earliest convenience, so we can proceed with the publication process.
 
-This being said, we did not want to let this opportunity pass by without also addressing the points raised by the third reviewer. We were a little intrigued by the strict criticism of this third reviewer, but at the same time understood the motivation behind his/her comments. While we appreciated very much your candid reaction this this review---given our response to the initial evaluation---, we thought that in addition to following your advise about how to handle it (through minor modifications of form and language), it was still appropriate for us to share with you our views about some of these criticisms. You will also find enclosed our responses, which we hope you will appreciate.
+This being said, we did not want to let this opportunity pass by without also addressing the points raised by the third reviewer. We were a little intrigued by the strict criticism of this third reviewer, but at the same time understood the motivation behind his/her comments. While we appreciated very much your candid reaction to this third review---given our response to the two initial ones---, we thought that in addition to following your advise about how to handle it (through minor modifications of form and language), it was still appropriate for us to share with you our views about some of these criticisms. You will also find enclosed our responses, which we hope you will appreciate. The latest changes to the manuscript are highlighted in the annotated version.
 
 We thank you again for your help during the review process, and look forward to working with the editorial team in the final production and publication of the article.
 
@@ -62,6 +62,7 @@ University of Memphis
 	Authors' Response to Reviewer 3 Comments
 \end{center}
 
+\vspace{3ex}
 \comment{1}{%
 As shown in Figure 2 of this manuscript, the major faults and its characteristicparameter uncertainties should be incorporated into the seismic hazard study of the this region. As the authors stated in Section 4, this type of work has been performed in Tavakoli and Ghafory-Ashtiany (1999) and many others. In order to improve the previous studies, therefore, the seismic hazard maps presented in this manuscript should be modified based on the known major fault sources and areal seismic sources, which are considered as background seismic sources. The smoothed seismicity approach could be used for the background seismic source zones. Otherwise, only using the smoothed seismicity approach could lead to misleading of seismic hazard values and hazard maps in this region, especially when the time span of earthquake catalog is not enough to give us the true seismicity pattern of the region. Lack of consideration for major faults, will have significant and far-reaching consequences for Iran and major metropolitan areas such as Tehran. Accepting the publication in a reputable journal such as Journal of Seismology without consideration for major faults will be a mistake. The reviewer is puzzled why the fourth author of this article who is a reputable researcher has agreed on the publication of this article. The authors write: ``We find our results to be helpful in understanding seismic hazard for northern Iran, but recognize that additional efforts are necessary to obtain more robust estimates at specific areas of interest and different site conditions.''
 }
@@ -101,5 +102,7 @@ The model provided is slightly different than a recently published work by Khoda
 \response{%
 We started to work on this paper in the summer of 2015 and submitted the first version of the manuscript for review in the summer of 2016. By pure coincidence, and without our knowledge, Khodaverdian et al.~submitted the first version of their work to the Bulletin of the Seismological Society of America in the summer of 2015, and their work was published in the summer of 2016. We had no way of knowing about their work before it was published, but once we learned about their publication we took the time to delay our submission a couple of months to modify our manuscript so it could reflect on the differences between their work and ours. As summarized in the manuscript, the main difference in the application of the smoothed seismicity method is the treatment of the $b$-value and $M_{\mathrm{c}}$, which they computed and smoothed within a larger grid than the one used for $a$ values. We argue in the manuscript that their approach may lead to over-smoothing across seismic regions and this is, in our view, not the best alternative. We, however, as stated in the quote highlighted by the reviewer, admit that this is a subjective decision which can be considered within the margins of the epistemic uncertainty intrinsic to studies of this nature. We also highlight the fact that the study of Khodaverdian et al.~focuses primarily in the determination of the seismic parameters, while we take the analysis to the hazard level, not only for a single model but for a combination of models that account for uncertainty. In addition, we also note that we used a more complete catalog, which includes recent strong earthquakes in the 2012--2015 period not considered by Khodaverdian et al. That said, we do not pretend to claim we intended to advance Khodaverdian et al., we simply happened to be working on a similar subject around the same time, with some differences which warrant, in our view, the publication of alternative results.
 }
+
+Changes in the manuscript motivated by the points raised by the reviewer are highlighted in the annotated version of the manuscript, which reflect our view towards as expressed in the responses above.
 
 \end{document}
